--- a/public/index.html
+++ b/public/index.html
@@ -26,10 +26,19 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>React App</title>
+    <title>Львівський Центр Надання Послуг Учасникам Бойових Дій</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
+
+    <iframe
+      id="chatbot"
+      allow="microphone;"
+      width="350"
+      height="430"
+      src="https://console.dialogflow.com/api-client/demo/embedded/bb6b8b8d-c8fc-485c-9dc0-90a7b975d91a">
+    </iframe>
+
   </body>
 </html>
